--- a/styles/prosilver/template/inlineview.html
+++ b/styles/prosilver/template/inlineview.html
@@ -1,4 +1,4 @@
-<div class="calendarweekview">
+<div class="calendarinlineview">
 	<div class="weekdays">
 		{%- for d in var.days -%}
 			<div class="day {{ d.weekday_class }}{%- if d.month_num % 2 %} even-month{%- endif -%}">
