--- a/styles/prosilver/template/event/overall_header_stylesheets_after.html
+++ b/styles/prosilver/template/event/overall_header_stylesheets_after.html
@@ -1,6 +1,6 @@
 {%- if marttiphpbb_calendarinlineview -%}
     <style>
-        div.calendarinlineview{
+        div.marttiphpbb-calendarinlineview{
             height: {{ (marttiphpbb_calendarinlineview.height_offset + (marttiphpbb_calendarinlineview.event_row_count * marttiphpbb_calendarinlineview.height_event_row)) / 10 -}}em;
         }
     </style>
