--- a/styles/prosilver/template/top.html
+++ b/styles/prosilver/template/top.html
@@ -1,7 +1,7 @@
-<div class="calendarinlineview">
+<div class="marttiphpbb-calendarinlineview">
 	<div class="weekdays">
 		{%- for d in var.days -%}
-			<div class="day {{ d.weekday_class }}{%- if d.month_num % 2 %} even-month{%- endif -%}">
+			<div class="day {{ d.weekday_class }}{%- if d.month % 2 == 0 %} even-month{%- endif -%}">
 				<div class="dayhead">
 					<div class="monthday">
 						{{- d.monthday -}}
@@ -9,14 +9,14 @@
 					<div class="weekday">
 						{{- d.weekday_abbrev -}}
 					</div>
-					{%- if var.show_moon_phase and d.moon_icon -%}
+					{%- if var.render.show_moon_phase and d.moon_icon -%}
 						<div class="moon">
 							<span class="fa-stack" title="{{- d.moon_title -}}">
 								<i class="fa fa-circle fa-inverse fa-stack-1x"></i>
 								<i class="fa {{ d.moon_icon }} fa-stack-1x"></i>
 							</span>
 						</div>
-					{%- elseif d.weekday == 1 and var.show_isoweek -%}
+					{%- elseif d.weekday == 1 and var.render.show_isoweek -%}
 						<div class="isoweek">
 							{{- d.isoweek -}}
 						</div>
@@ -24,6 +24,8 @@
 				</div>
 			</div>
 		{%- endfor -%}
+		<div style="clear:both;"></div>
+
 	</div>
 	<div class="eventrows">
 		<div class="evrow-head"></div>
