--- a/styles/prosilver/template/base.html
+++ b/styles/prosilver/template/base.html
@@ -2,31 +2,31 @@
 	<div class="weekdays">
 		{%- for d in var.days -%}
 			<div class="day {{ d.weekday_class }}{%- if d.month % 2 == 0 %} even-month{%- endif -%}">
-				<div class="day-info day-info-mid">
+				{%- block day_info -%}
+				<div class="day-info{%- block day_info_class -%}{%- endblock -%}">
+					{%- block day_info_monthday -%}
 					<div class="monthday">
 						{{- d.monthday -}}
 					</div>
+					{%- endblock day_info_monthday -%}
+					{%- block day_info_weekday -%}
 					<div class="weekday">
 						{{- d.weekday_abbrev -}}
 					</div>
+					{%- endblock day_info_weekday -%}
 					{%- if var.render.show_moon_phase and d.moon_icon -%}
-						<div class="moon">
-							<span class="fa-stack" title="{{- d.moon_title -}}">
-								<i class="fa fa-circle fa-inverse fa-stack-1x"></i>
-								<i class="fa {{ d.moon_icon }} fa-stack-1x"></i>
-							</span>
-						</div>
+						{% include '@marttiphpbb_calendarinlineview/include/moon_phase.html' -%}
 					{%- elseif d.weekday == 1 and var.render.show_isoweek -%}
-						<div class="isoweek">
-							{{- d.isoweek -}}
-						</div>
+						{%- include '@marttiphpbb_calendarinlineview/include/isoweek.html' -%}
 					{%- endif -%}
 				</div>
+				{%- endblock day_info -%}
 			</div>
 		{%- endfor -%}
 	</div>
 	<div class="eventrows">
-		<div class="evrow-info info-mid"></div>
+		{%- block evrow_fill_top -%}{%- endblock -%}
+		<div class="evrow-fill"></div>
 		{%- for er in var.eventrows -%}
 			<div class="evrow">
 			{%- for seg in er -%}
@@ -45,5 +45,6 @@
 			</div>
 		{%- endfor -%}
 		<div class="evrow-fill"></div>
+		{%- block evrow_fill_bottom -%}{%- endblock -%}
 	</div>
 </div>
