--- a/styles/prosilver/template/small_info_bottom.html
+++ b/styles/prosilver/template/small_info_bottom.html
@@ -1,7 +1,6 @@
 {%- extends '@marttiphpbb_calendarinlineview/base.html' -%}
 
-{%- block day_info_class %} day-info-mid day-info-bottom{%- endblock -%}
-{%- block day_info_monthday -%}{%- endblock -%}
+{%- block day_info_class %} day-info-small day-info-bottom{%- endblock -%}
 {%- block day_info_weekday -%}{%- endblock -%}
 
 {%- block evrow_fill_class_bottom -%}
