--- a/styles/prosilver/template/moon_top.html
+++ b/styles/prosilver/template/moon_top.html
@@ -1,9 +1,9 @@
 {%- extends '@marttiphpbb_calendarinlineview/base.html' -%}
 
-{%- block day_info_class %} day-info-mid day-info-bottom{%- endblock -%}
+{%- block day_info_class %} day-info-mid{%- endblock -%}
 {%- block day_info_monthday -%}{%- endblock -%}
 {%- block day_info_weekday -%}{%- endblock -%}
 
-{%- block evrow_fill_class_bottom -%}
+{%- block evrow_fill_class_top -%}
     evrow-info-small
 {%- endblock -%}
