--- a/styles/prosilver/theme/inlineview.css
+++ b/styles/prosilver/theme/inlineview.css
@@ -18,7 +18,7 @@ div.marttiphpbb-calendarinlineview div.weekdays div.day
 {
 	flex: 1;
 	margin: .15em;
-	border-radius: 1em;
+	border-radius: .6em;
 	background: #d7d7d7;
 	color: #444;
 	display: flex;
@@ -122,27 +122,30 @@ div.marttiphpbb-calendarinlineview div.eventrows
 {
 	display:flex;
 	flex-direction: column;
-	position:absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
 }
 
-div.marttiphpbb-calendarinlineview div.eventrows div.evrow-info
+div.marttiphpbb-calendarinlineview div.eventrows div.evrow-info-big
 {
-	flex-basis: auto;
 	height: 3em;
+}
+
+div.marttiphpbb-calendarinlineview div.eventrows div.evrow-info-mid
+{
+	height: 2em;
+}
+
+div.marttiphpbb-calendarinlineview div.eventrows div.evrow-info-small
+{
+	height: 5em;
 }
 
 div.marttiphpbb-calendarinlineview div.eventrows div.evrow-fill
 {
-	flex-basis: auto;
 	height: 1em;
 }
+
 div.marttiphpbb-calendarinlineview div.eventrows div.evrow
 {
-	flex: 1;
 	display: flex;
 	justify-content: space-evenly;
 	z-index: 1;
@@ -170,14 +173,14 @@ div.marttiphpbb-calendarinlineview div.eventrows div.evrow:nth-child(even) div.f
 
 div.marttiphpbb-calendarinlineview div.eventrows div.evrow div.ev.ev-start div.ev-overlay
 {
-	border-top-left-radius: .7em;
-	border-bottom-left-radius: .7em;
+	border-top-left-radius: .5em;
+	border-bottom-left-radius: .5em;
 }
 
 div.marttiphpbb-calendarinlineview div.eventrows div.evrow div.ev.ev-end div.ev-overlay
 {
-	border-top-right-radius: .7em;
-	border-bottom-right-radius: .7em;
+	border-top-right-radius: .5em;
+	border-bottom-right-radius: .5em;
 }
 
 div.marttiphpbb-calendarinlineview div.eventrows div.evrow div.ev div.ev-overlay
@@ -209,14 +212,14 @@ div.marttiphpbb-calendarinlineview div.eventrows div.evrow div.ev a
 
 div.marttiphpbb-calendarinlineview div.eventrows div.evrow div.f-con div.ev.ev-start
 {
-	border-top-left-radius: .7em;
-	border-bottom-left-radius: .7em;
+	border-top-left-radius: .5em;
+	border-bottom-left-radius: .5em;
 	border-left-style: solid;
 }
 div.marttiphpbb-calendarinlineview div.eventrows div.evrow div.f-con div.ev.ev-end
 {
-	border-top-right-radius: .7em;
-	border-bottom-right-radius: .7em;
+	border-top-right-radius: .5em;
+	border-bottom-right-radius: .5em;
 	border-right-style: solid;
 }
 
