hover multi (js)

--- a/styles/prosilver/template/event/overall_header_stylesheets_after.html
+++ b/styles/prosilver/template/event/overall_header_stylesheets_after.html
@@ -6,4 +6,6 @@
     {%- if marttiphpbb_calendarinlineview.extra_stylesheet -%}
 	    {%- INCLUDECSS marttiphpbb_calendarinlineview.extra_stylesheet -%}
     {%- endif -%}
+
+    {%- INCLUDEJS '@marttiphpbb_calendarinlineview/js/inlineview.js' -%}
 {%- endif -%}
