--- a/styles/prosilver/template/medium_info_bottom.html
+++ b/styles/prosilver/template/medium_info_bottom.html
@@ -3,5 +3,5 @@
 {%- block day_info_class %} day-info-mid day-info-bottom{%- endblock -%}
 
 {%- block evrow_fill_class_bottom -%}
-    evrow-info-small
+    evrow-info-mid
 {%- endblock -%}
