--- a/styles/prosilver/template/medium_info_top.html
+++ b/styles/prosilver/template/medium_info_top.html
@@ -2,6 +2,6 @@
 
 {%- block day_info_class %} day-info-mid{%- endblock -%}
 
-{%- block evrow_fill_class_bottom -%}
-    evrow-info-small
+{%- block evrow_fill_class_top -%}
+    evrow-info-mid
 {%- endblock -%}
