--- a/styles/prosilver/template/small_info_top.html
+++ b/styles/prosilver/template/small_info_top.html
@@ -3,6 +3,6 @@
 {%- block day_info_class %} day-info-small{%- endblock -%}
 {%- block day_info_weekday -%}{%- endblock -%}
 
-{%- block evrow_fill_class_bottom -%}
+{%- block evrow_fill_class_top -%}
     evrow-info-small
 {%- endblock -%}
