--- a/styles/prosilver/template/moon_top.html
+++ b/styles/prosilver/template/moon_top.html
@@ -1,6 +1,6 @@
 {%- extends '@marttiphpbb_calendarinlineview/base.html' -%}
 
-{%- block day_info_class %} day-info-mid{%- endblock -%}
+{%- block day_info_class %} day-info-small{%- endblock -%}
 {%- block day_info_monthday -%}{%- endblock -%}
 {%- block day_info_weekday -%}{%- endblock -%}
 
